# Drominator

./: .gitignore  .gitigonre  CLAUDE.md  CMakeLists.txt  Drominator_Colab_Training.ipynb  Drominator_YOLO_Finetuning_Colab.ipynb  README.md  fpv_drone_ai_controller.cpp  fpv_drone_gui_linux.cpp  main.cpp  manette_code_ia.py   manette_ia.py  pipeline.py  requirement.txt  requirements.txt  test_manette.py  test_webcam.py  vision.py
Expresslrs/: elrs_crsf_tx  elrs_crsf_tx.cpp
ai/: corridor.py  drone_env.py  generate_gate_dataset.py  pipeline_utils.py  test_gate_detector.py  train.py  train_full_pipeline.py  train_gate_detector.py  train_vision.py  validate_gate_dataset.py  viewer.py
ai/logs/PPO_0/: events.out.tfevents.1776773499.eythan-Pulse-16-AI-C1VGKG.48658.0  events.out.tfevents.1776773597.eythan-Pulse-16-AI-C1VGKG.49279.0
ai/logs_pipeline/PPO_0/: events.out.tfevents.1776775293.eythan-Pulse-16-AI-C1VGKG.124155.0  events.out.tfevents.1776776811.eythan-Pulse-16-AI-C1VGKG.129311.0  events.out.tfevents.1776779380.eythan-Pulse-16-AI-C1VGKG.136575.0  events.out.tfevents.1776780300.eythan-Pulse-16-AI-C1VGKG.140151.0  events.out.tfevents.1776811009.eythan-Pulse-16-AI-C1VGKG.19876.0
ai/logs_vision/PPO_0/: events.out.tfevents.1776774308.eythan-Pulse-16-AI-C1VGKG.116832.0  events.out.tfevents.1776774333.eythan-Pulse-16-AI-C1VGKG.117032.0
sim/: corridor_sim.py  panda_sim.py  relay.py  renderer.py  scene.html
stereo/: fake_stereo.py
